image wrapper adjusts to changing size of screen, not that article one has too much space on the right side, to be solved

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,6 @@ p {
 }
 
 
-
 .first-article{
     display: flex;
     flex-direction: column;
@@ -186,7 +185,10 @@ p {
     padding-bottom: 20px;
 }
 
-
+.image-one{
+    width: 100%;
+    padding: revert;
+}
 .image-wrapper {
     flex-basis: 800px;
     flex-grow: 0;
